fix: change route name and assign soft remove from delete to patch
